--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Gemster</string>
+    <string name="banner_ad_unit_id">ca-app-pub-6742502407672292/2415877961</string>
 </resources>
